--- a/JAVA/pom.xml
+++ b/JAVA/pom.xml
@@ -13,6 +13,23 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>3.0.12.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.sqlchan</groupId>
             <artifactId>Kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
